# homehub-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: config_store.py  main.py  schemas.py  system_info.py
